[package]
name = "esbokio"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
http = "1.4.0"
mime = "0.3.17"
multipart = { version = "0.18.0", default-features = false, features = ["client"] }
rpassword = "7.4"
rust_decimal = { version = "1.39.0", features = ["macros", "serde_json", "serde-with-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
tabled = "0.20.0"
ureq = { version = "3.1.4", features = ["json", "cookies"] }
urlencoding = "2.1.3"
regex = "1.12.2"
